--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!------------------------------------------------------>
 	</head>
 <body>
-	<header class="header">
+	<header class="header overlay">
 		<div class="container">
 			<div class="header__head">
 				<a href="#" class="header__logo"><img src="img/Logo.png" alt=""></a>
@@ -83,23 +83,88 @@
 	</header>
 	<main class="main">
 		<section class="section__about">
-			<div class="container">
 			<div class="about__body">
-				<div class="about__content">
-					<div class="about__image"><img src="img/01.png" alt=""></div>
-					<div class="about__text">
-						<div class="title about__title">
-							<div class="title-main about__title-main">OUR STORY</div>
+				<div class="container">
+					<div class="about__content">
+						
+						<div class="about__image"><img src="img/01.png" alt=""></div>
+						<div class="about__text">
+							<div class="title about__title">
+								<div class="title-main about__title-main">our story</div>
+							</div>
+							<div class="description about__description">
+								<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus</p>
+								<p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+							</div>
+							<div class="btn-wrapper"><a href="#" class="btn about__btn">learn more</a></div>
 						</div>
-						<div class="description about__description">
-							<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus</p>
-							<p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-						</div>
-						<div class="btn-wrapper"><a href="#" class="btn about__btn">learn more</a></div>
+					
 					</div>
 				</div>
-				<div class="about__video"></div>
+				<div class="about__video overlay">
+					<a href="#" class="about__link">
+						<div class="about__play">
+							<div class="about__img"><img src="img/about/play.png" alt=""></div>
+							<div class="about__sign">watch our store</div>
+						</div>
+					</a>
+				</div>
 			</div>
+		</section>
+		<section class="expertise">
+			<div class="container">
+				<div class="expertise__body">
+					<div class="title title_line expertise__title">
+						<div class="title-main expertise__title-main">expertise</div>
+						<div class="subtitle expertise__subtitle">Lorem ipsum dolor sit amet proin gravida nibh vel velit</div>
+					</div>
+					<div class="expertise__row">
+						<div class="expertise__column">
+							<div class="item-expertise">
+								<div class="item-expertise__icon"><img src="img/expertise/01.png" alt=""></div>
+								<div class="item-expertise__title">web design</div>
+								<div class="item-expertise__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</div>
+							</div>
+						</div>
+						<div class="expertise__column">
+							<div class="item-expertise">
+								<div class="item-expertise__icon"><img src="img/expertise/02.png" alt=""></div>
+								<div class="item-expertise__title">branding identity</div>
+								<div class="item-expertise__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</div>
+							</div>
+						</div>
+						<div class="expertise__column">
+							<div class="item-expertise">
+								<div class="item-expertise__icon"><img src="img/expertise/03.png" alt=""></div>
+								<div class="item-expertise__title">mobile app</div>
+								<div class="item-expertise__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</div>
+							</div>
+						</div>
+					</div>
+					<div class="expertise__row">
+						<div class="expertise__column">
+							<div class="item-expertise">
+								<div class="item-expertise__icon"><img src="img/expertise/04.png" alt=""></div>
+								<div class="item-expertise__title">search engine optimization</div>
+								<div class="item-expertise__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</div>
+							</div>
+						</div>
+						<div class="expertise__column">
+							<div class="item-expertise">
+								<div class="item-expertise__icon"><img src="img/expertise/05.png" alt=""></div>
+								<div class="item-expertise__title">game development</div>
+								<div class="item-expertise__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</div>
+							</div>
+						</div>
+						<div class="expertise__column">
+							<div class="item-expertise">
+								<div class="item-expertise__icon"><img src="img/expertise/06.png" alt=""></div>
+								<div class="item-expertise__title">made with love</div>
+								<div class="item-expertise__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
