--- a/index.html
+++ b/index.html
@@ -167,6 +167,143 @@
 				</div>
 			</div>
 		</section>
+		<section class="team overlay">
+			<div class="container">
+				<div class="team__body">
+					<div class="title title_line team__title">
+						<div class="title-main team__title-main">meet our amazing team</div>
+						<div class="subtitle team__subtitle">Lorem ipsum dolor sit amet proin gravida nibh vel velit</div>
+					</div>
+					<div class="team__row">
+						<div class="team__column">
+							<div class="item-team">
+								<div class="item-team__img"><img src="img/team/01.png" alt=""></div>
+								<div class="item-team__name name">
+									<div class="item-team__title name-title">semf ucuk</div>
+									<div class="item-team__subtitle name-subtitle">ceo & founder</div>
+								</div>
+							</div>
+						</div>
+						<div class="team__column">
+							<div class="item-team">
+								<div class="item-team__img"><img src="img/team/01.png" alt=""></div>
+								<div class="item-team__name name">
+									<div class="item-team__title name-title">dik adalin</div>
+									<div class="item-team__subtitle name-subtitle">engineering</div>
+								</div>
+							</div>
+						</div>
+						<div class="team__column">
+							<div class="item-team">
+								<div class="item-team__img"><img src="img/team/01.png" alt=""></div>
+								<div class="item-team__name name">
+									<div class="item-team__title name-title">jeng kol</div>
+									<div class="item-team__subtitle name-subtitle">designer</div>
+								</div>
+							</div>
+						</div>
+						<div class="team__column">
+							<div class="item-team">
+								<div class="item-team__img"><img src="img/team/01.png" alt=""></div>
+								<div class="item-team__name name">
+									<div class="item-team__title name-title">pet romak</div>
+									<div class="item-team__subtitle name-subtitle">marketing</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="team__text">Become part of our dream team, let’s join us !</div>
+					<a href="#" class="btn team__btn">we are hiring</a>
+				</div>
+			</div>
+		</section>
+		<section class="works">
+			<div class="works__head">
+				<div class="container">
+					<div class="title works__title">
+						<div class="title-main works__title-main">our works</div>
+						<a href="#" class="works__link"><span>See All Project in dribble</span></a>
+					</div>
+				</div>
+			</div>
+			<div class="works__body">
+				<div class="works__row">
+					<div class="works__column">
+						<div class="works__item"><img src="img/works/01.png" alt=""></div>
+						<div class="works__item"><img src="img/works/03.png" alt=""></div>
+					</div>
+					<div class="works__column">
+						<div class="works__item"><img src="img/works/02.png" alt=""></div>
+						<div class="works__item"><img src="img/works/01.png" alt=""></div>
+					</div>
+					<div class="works__column">
+						<div class="works__item"><img src="img/works/03.png" alt=""></div>
+						<div class="works__item"><img src="img/works/04.png" alt=""></div>
+					</div>
+					<div class="works__column">
+						<div class="works__item"><img src="img/works/04.png" alt=""></div>
+						<div class="works__item"><img src="img/works/03.png" alt=""></div>
+					</div>
+					<div class="works__column">
+						<div class="works__item"><img src="img/works/01.png" alt=""></div>
+						<div class="works__item"><img src="img/works/02.png" alt=""></div>
+					</div>
+					<div class="works__column">
+						<div class="works__item"><img src="img/works/03.png" alt=""></div>
+						<div class="works__item"><img src="img/works/01.png" alt=""></div>
+					</div>
+				</div>
+			</div>
+			<div class="works__footer">
+				<a href="" class="btn works__btn">load more</a>
+			</div>
+		</section>
+		<section class="feedback overlay">
+			<div class="container">
+				<div class="feedback__body">
+					<div class="title feedback__title">
+						<div class="title-main feedback__title-main">“</div>
+					</div>
+					<div class="feedback__slider">
+						<div class="feedback__slider-item">
+							<div class="feedback__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
+							<div class="feedback__name name">
+								<div class="name-title feedback__name-title">jane galadrielL</div>
+								<div class="name-subtitle feedback__name-subtitle">ceo tengkurep</div>
+							</div>
+						</div>
+						<div class="feedback__slider-item">
+							<div class="feedback__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
+							<div class="feedback__name name">
+								<div class="name-title feedback__name-title">jane galadrielL</div>
+								<div class="name-subtitle feedback__name-subtitle">ceo tengkurep</div>
+							</div>
+						</div>
+						<div class="feedback__slider-item">
+							<div class="feedback__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
+							<div class="feedback__name name">
+								<div class="name-title feedback__name-title">jane galadrielL</div>
+								<div class="name-subtitle feedback__name-subtitle">ceo tengkurep</div>
+							</div>
+						</div>
+						<div class="feedback__slider-item">
+							<div class="feedback__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
+							<div class="feedback__name name">
+								<div class="name-title feedback__name-title">jane galadrielL</div>
+								<div class="name-subtitle feedback__name-subtitle">ceo tengkurep</div>
+							</div>
+						</div>
+						<div class="feedback__slider-item">
+							<div class="feedback__text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</div>
+							<div class="feedback__name name">
+								<div class="name-title feedback__name-title">jane galadrielL</div>
+								<div class="name-subtitle feedback__name-subtitle">ceo tengkurep</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
