--- a/index.html
+++ b/index.html
@@ -304,6 +304,89 @@
 				</div>
 			</div>
 		</section>
+		<section class="contact">
+			<div class="container">
+				<div class="contact__body">
+					<form action="" class="form-contact">
+						<div class="title form-contact__title">
+							<div class="title-main form-contact__title-main">give us a good news</div>
+						</div>
+						<input type="text" placeholder="name" class="form-contact__input">
+						<input type="text" placeholder="email" class="form-contact__input">
+						<input type="text" placeholder="subject" class="form-contact__input">
+						<textarea name="" placeholder="your message" class="form-contact__textarea"></textarea>
+						<button class="btn form-contact__btn">submit</button>
+					</form>
+					<div class="clients-contact">
+						<div class="title clients-contact__title">
+							<div class="title-main clients-contact__title-main">our happy clients</div>
+						</div>
+						<div class="clients-contact__content">
+							<div class="clients-contact__row">
+								<div class="clients-contact__column">
+									<div class="clients-contact__item"><img src="img/clients/Zara_Logo.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Barneys-New-York_Logo.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Calvin_klein_logo.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Converse_logo.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Levis_logo.svg" alt=""></div>
+								</div>
+								<div class="clients-contact__column">
+									<div class="clients-contact__item"><img src="img/clients/Mango_Logo.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Gucci_Logo.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Logo_NIKE.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Puma_Logo.svg" alt=""></div>
+									<div class="clients-contact__item"><img src="img/clients/Billabong.svg" alt=""></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
+	<footer class="footer overlay">
+		<div class="container">
+			<div class="footer__body">
+				<div class="footer__row">
+					<div class="footer__column">
+						<div class="footer__logo"><img src="img/Logo.png" alt=""></div>
+						<div class="footer__text">lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</div>
+						<div class="footer__links">
+							<ul class="footer__list">
+								<li class="footer__link"><a href="#">help</a></li>
+								<li class="footer__link"><a href="#">terms & condition</a></li>
+								<li class="footer__link"><a href="#">privacy</a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="footer__column">
+						<div class="footer__column-title">our studio</div>
+						<div class="footer__address">
+							<p>Ruko cucruk, Jl. Radio luar dalem jos</p>
+							<p>No.12 - 13, Kalideres - Jakarta Barat </p>
+							<p>11480 - Indonesia</p>
+						</div>
+						<div class="footer__phone">(+62) 21-2224 3333</div>
+					</div>
+					<div class="footer__column">
+						<div class="footer__column-title">stay in touch</div>
+						<div class="footer__btns">
+							<a href="#" class="btn footer__btn">Subscribe our newsletter</a>
+							<a href="" class="footer__btn-with-icon"><img src="img/footer/paper-icon.png" alt=""></a>
+						</div>
+						<div class="footer__social">
+							<div class="footer__social-icon"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+							<div class="footer__social-icon"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+							<div class="footer__social-icon"><i class="fa fa-dribbble" aria-hidden="true"></i></div>
+							<div class="footer__social-icon"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+							<div class="footer__social-icon"><i class="fa fa-google-plus" aria-hidden="true"></i></div>
+							<div class="footer__social-icon"><i class="fa fa-youtube-play" aria-hidden="true"></i></div>
+						</div>
+						<div class="footer__copyright">Copyright © 2015 - Tajem Creative</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
